--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ members = [
     "functions",
     "guessing_game",
     "hello_cargo",
+    "leetcode-add-two-numbers-ii",
+    "lifetimes",
     "loops",
     "panic",
     "restaurant",
@@ -16,5 +18,6 @@ members = [
 #
 #    "rmain",
 
+    "spiral-matrix-iii",
     "threading",
 ]
