--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "functions",
     "guessing_game",
     "hello_cargo",
+    "is-subsequence",
     "leetcode-add-two-numbers-ii",
     "lifetimes",
     "loops",
