Add my failed attempt to solve https://leetcode.com/problems/maximum-subarray/

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
     "leetcode-add-two-numbers-ii",
     "lifetimes",
     "loops",
+    "maximum-subarray",
     "mlua-playground",
     "panic",
     "partition-labels",
