--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
     "leetcode-add-two-numbers-ii",
     "lifetimes",
     "loops",
+    "macros",
     "maximum-subarray",
     "mlua-playground",
     "panic",
