Add multi_borrowing example dual C++/Rust example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory("accidental_move")
 add_subdirectory("cfib")
+add_subdirectory("multi_borrowing")
 
 # `cmain` is commented out because it depeonds on `fibonacci` which is
 # a Rust library, and this workspace isn't smart enough yet to build that
